add support for virtual thread and type pattern